--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -178,10 +178,16 @@ h1, h2, h3, h4, h5, h6, p, a {
       opacity: 1; } }
 
 .modal {
-  transition: transform 0s 0.5s, opacity 0.5s;
+  transition: transform 0.5s;
   display: flex;
-  transform: translateX(100vw);
-  opacity: 0; }
+  transform: translateY(100vh);
+  overflow: hidden; }
+  .modal .modal-close {
+    z-index: 100;
+    position: absolute;
+    right: 0;
+    top: 0;
+    margin: 15px; }
   .modal img {
     transition: transform 0.5s cubic-bezier(0.785, 0.135, 0.15, 0.86) 0.5s;
     transform: translateY(-100%); }
@@ -246,9 +252,8 @@ h1, h2, h3, h4, h5, h6, p, a {
       .modal .modal-card a.button span {
         z-index: 10; }
   .modal.is-active {
-    transition: transform 0s ease-in-out, opacity 0.5s;
-    transform: translateX(0);
-    opacity: 1; }
+    transition: transform 0.5s ease-in-out;
+    transform: translateY(0); }
     .modal.is-active img {
       transform: translateY(0); }
     .modal.is-active .title:before {
@@ -470,7 +475,9 @@ body {
     padding: 10px;
     width: 100%;
     background-color: rgba(0, 0, 0, 0.5);
-    color: #fff; }
+    color: #fff;
+    border-bottom-right-radius: 25px;
+    border-bottom-left-radius: 25px; }
   #projects .card .is-overlay {
     opacity: 0; }
     #projects .card .is-overlay .tag {
