--- a/src/styles/sections/_projectCard.sass
+++ b/src/styles/sections/_projectCard.sass
@@ -28,6 +28,8 @@ $card-background-color: #fff
       width: 100%
       background-color: rgba(#000, .5)
       color: #fff
+      border-bottom-right-radius: $border-radius
+      border-bottom-left-radius: $border-radius
 
     .is-overlay
       opacity: 0
